--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
 body{
     background-color: cornflowerblue;
 }
+hr{
+    margin-top: 50px;
+    border-width: 15px;
+    border-style: none;
+    border-top-style: dotted;
+    width: 30%;
+    border-color: black;
+}
