--- a/main.css
+++ b/main.css
@@ -19,5 +19,23 @@ ol,ul,img,p{
     margin-bottom: 0;
     margin-right: auto;
     margin-left: auto;
-    
+
+}
+#navbar{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+
+}
+#navbar li{
+    float: left;
+}
+#navbar li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
