--- a/main.css
+++ b/main.css
@@ -48,5 +48,28 @@ ol,ul,img,p{
 *{
     margin: 0;
     padding: 0;
-    
+
+}
+.table tr td{
+    border: 1 px;
+}
+
+.table{
+    max-width: 500px;
+    margin: 0 auto;
+    border-collapse: collapse;
+
+}
+.table tr th{
+    background-color: black;
+    color: white;
+
+}
+.table th td{
+    padding: 15px;
+    text-align: left;
+
+}
+.table tr:hover{
+    background-color: white;
 }
