--- a/main.css
+++ b/main.css
@@ -73,3 +73,10 @@ ol,ul,img,p{
 .table tr:hover{
     background-color: white;
 }
+.footer{
+    background-color: black;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    margin-top: 15px;
+}
