--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ body{
 }
 hr{
     margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
     border-width: 15px;
     border-style: none;
     border-top-style: dotted;
@@ -23,11 +25,11 @@ ol,ul,img,p{
 }
 #navbar{
     list-style-type: none;
-    margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: black;
-
+position: sticky;
+top: 0%;
 }
 #navbar li{
     float: left;
@@ -50,27 +52,28 @@ ol,ul,img,p{
     padding: 0;
 
 }
-.table tr td{
-    border: 1 px;
+table tr td{
+    border: 1px solid;
 }
 
-.table{
+table{
+    
     max-width: 500px;
     margin: 0 auto;
     border-collapse: collapse;
 
 }
-.table tr th{
+table tr th{
     background-color: black;
     color: white;
 
 }
-.table th td{
+table th td{
     padding: 15px;
     text-align: left;
 
 }
-.table tr:hover{
+table tr:hover{
     background-color: white;
 }
 .footer{
