--- a/main.css
+++ b/main.css
@@ -96,5 +96,13 @@ table tr:hover{
 .content-form{
     max-width: 70%;
     margin: auto;
+
+}
+.form-login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    margin-bottom: 100px;
     
 }
