--- a/main.css
+++ b/main.css
@@ -104,5 +104,11 @@ table tr:hover{
     align-items: center;
     height: 90vh;
     margin-bottom: 100px;
-    
+
+}
+.form-contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
 }
