--- a/main.css
+++ b/main.css
@@ -112,3 +112,14 @@ table tr:hover{
     align-items: center;
     margin-bottom: 100px;
 }
+.my-portofolio{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+}
+.my-portofolio img{
+    box-sizing: border-box;
+    width: 33.33%;
+    padding: 25px;
+}
