--- a/main.css
+++ b/main.css
@@ -123,3 +123,11 @@ table tr:hover{
     width: 33.33%;
     padding: 25px;
 }
+@media(max-width:850px)
+{
+    .my-portofolio img{width: 50%;}
+}
+@media(max-width:500px)
+{
+    .my-portofolio img{width: 100%;}
+}
